@@ -1,3 +1,7 @@
+2018-11-26  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* generic_window.C: Add set_window_type().
+
 2018-11-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Clean up create_checkbox() and create_radio(), replacing overloads
